--- a/popup/index.html
+++ b/popup/index.html
@@ -25,11 +25,11 @@
 <body style="width: 550px">
     <!-- Image and text -->
     <div style="display: flex; flex-direction: column; justify-content: center; text-align: center; padding: 20px;">
-        <h1>
-            Hiện tại Tính điểm IUH đã được cập nhật
+        <h1 style="color: #FF0000;">
+            Hiện tại do trang trường mới cập nhật nên ứng dụng đang bị lỗi.
         </h1>
         <span>
-            Ứng dụng vẫn chưa hoàn thiện và đang được cập nhật
+            Dự tính ngày 14/06/2021 sẽ được fix lỗi
         </span>
              Mong các bạn thông cảm
              <span></span>
